--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build && gh-pages -b master -d public"
+    "deploy": "gatsby build && npm run copy && gh-pages -b master -d public",
+    "copy": "cpy ./demo/ ./public --parents"
   },
   "dependencies": {
     "gatsby": "^1.9.277",
@@ -33,6 +34,7 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
+    "cpy-cli": "^2.0.0",
     "eslint": "^5.5.0",
     "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^1.2.0",
