New post - Add danger.js to your OSS in 5 mins

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Gatsby hello world starter",
+  "name": "gokulkrishh",
+  "description": "My personal blog using gatsby 😍",
   "license": "MIT",
   "scripts": {
     "start": "gatsby develop",
