--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "gatsby-plugin-manifest": "^2.0.3",
     "gatsby-plugin-no-sourcemaps": "^2.0.0",
     "gatsby-plugin-offline": "^3.5.0",
-    "gatsby-plugin-postcss-sass": "^1.0.22",
+    "gatsby-plugin-postcss": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^3.6.0",
@@ -31,7 +30,7 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
     "lodash": "^4.17.11",
-    "node-sass": "4.14.1",
+    "postcss": "^8.1.10",
     "prismjs": "^1.15.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -42,6 +41,7 @@
     "eslint": "^7.14.0",
     "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^3.1.0",
-    "prettier": "^2.2.0"
+    "prettier": "^2.2.0",
+    "tailwindcss": "^2.0.1"
   }
 }
