--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "gatsby develop",
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "serve": "gatsby serve",
-    "gh-pages": "gh-pages -b master -d public",
-    "copy": "cpy ./demo ./public/static --parents && cpy ./CNAME ./public --parents"
+    "copy": "cpy ./demo ./public/static --parents && cpy ./CNAME ./public --parents",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b gh-pages"
   },
   "dependencies": {
     "disqus-react": "^1.0.5",
