--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.0.5",
     "gatsby-remark-copy-linked-files": "^2.0.5",
+    "gatsby-remark-embed-video": "^3.1.0",
     "gatsby-remark-images": "^3.6.0",
     "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-remark-responsive-iframe": "^2.0.5",
