--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.0.1",
     "gatsby-image": "^3.0.0",
+    "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^3.0.0",
