--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "copy": "cpy ./demo ./public/static --parents && cpy ./CNAME ./public --parents",
-    "deploy": "gatsby build --prefix-paths && npm run copy && gh-pages -d public -b gh-pages"
+    "clean": "gatsby clean && npm run copy",
+    "copy": "cpy ./demo ./public/static --parents && cpy ./CNAME ./public --parents"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
