--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "gatsby clean && npm run copy",
-    "copy": "cpy ./demo ./public/static --parents && cpy ./CNAME ./public --parents"
+    "copy": "cpy ./demo ./public/static --parents && cpy ./CNAME ./public --parents",
+    "deploy": "npm run build && npm run copy && gh-pages -d public -b gh-pages"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
@@ -27,6 +28,7 @@
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-mdx": "^2.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-relative-paths": "^1.0.1",
     "gatsby-plugin-remove-trailing-slashes": "^3.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-sitemap": "^3.0.0",
