--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build --prefix-paths",
+    "build": "gatsby build --prefix-paths && npm run copy",
     "serve": "gatsby serve",
-    "clean": "gatsby clean && npm run copy",
+    "clean": "gatsby clean",
     "copy": "cpy ./demo ./public/static --parents && cpy ./CNAME ./public --parents",
-    "deploy": "npm run build && npm run copy && gh-pages -d public -b gh-pages"
+    "deploy": "npm run build && gh-pages -d public -b gh-pages"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
