--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-mdx": "^2.0.0",
+    "gatsby-plugin-purgecss": "^6.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-relative-paths": "^1.0.1",
     "gatsby-plugin-remove-trailing-slashes": "^3.0.0",
