--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@weknow/gatsby-remark-twitter": "^0.2.3",
     "cpy-cli": "^3.1.1",
     "gatsby": "^3.0.1",
     "gatsby-image": "^3.0.0",
     "gatsby-paginate": "^1.1.1",
+    "gatsby-plugin-canonical-urls": "^3.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-mdx": "^2.0.0",
+    "gatsby-plugin-no-sourcemaps": "^3.0.0",
     "gatsby-plugin-purgecss": "^6.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-relative-paths": "^1.0.1",
