--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@weknow/gatsby-remark-twitter": "^0.2.3",
+    "babel-preset-gatsby": "^1.0.0",
     "cpy-cli": "^3.1.1",
     "gatsby": "^3.0.1",
     "gatsby-image": "^3.0.0",
@@ -41,6 +42,7 @@
     "gatsby-remark-images": "^4.0.0",
     "gatsby-remark-prismjs": "^4.0.0",
     "gatsby-remark-reading-time": "^1.1.0",
+    "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
