--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: yarn
-      - run: yarn run build
+      - run: npm
+      - run: npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
